packages/isar/test/errors/id/duplicate.dart
// two or more properties with type "Id" defined

import 'package:isar/isar.dart';

@collection
class Test {
  Id? id1;

  Id? id2;
}
